# CE308-Project

./: Cargo.toml  Dockerfile  README.md  railway.toml
controller/: Cargo.toml
controller/src/: main.rs  redis_adapter.rs  storage.rs
core/: Cargo.toml
core/src/: dedupe.rs  lib.rs  mqtt.rs  pipeline.rs  rules.rs  telemetry.rs
dashboard/: Dockerfile  index.html  package-lock.json  package.json  railway.toml
dashboard/src/: App.jsx  api.js  main.jsx  styles.css
simulator/: Cargo.toml
simulator/src/: main.rs
src/: redis_adapter.rs  storage.rs
tests/: pipeline.rs
